Support legacy Paper with a Java 8 compatible probe